// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias-key.yml - yaml-verify 1`] = `
[&123 foo, *123 : 456]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[&123 foo, *123 : 456]

`;

exports[`alias-key.yml - yaml-verify 2`] = `
[&123 foo, *123 : 456]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[&123 foo, *123 : 456]

`;

exports[`alias-key.yml - yaml-verify 3`] = `
[&123 foo, *123 : 456]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[&123 foo, *123 : 456]

`;

exports[`array-key.yml - yaml-verify 1`] = `
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-key.yml - yaml-verify 2`] = `
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

`;

exports[`array-key.yml - yaml-verify 3`] = `
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-key-array-value.yml - yaml-verify 1`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-key-array-value.yml - yaml-verify 2`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

`;

exports[`array-key-array-value.yml - yaml-verify 3`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-plain.yml - yaml-verify 1`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

`;

exports[`array-plain.yml - yaml-verify 2`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-plain.yml - yaml-verify 3`] = `
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

`;

exports[`array-value.yml - yaml-verify 1`] = `
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`array-value.yml - yaml-verify 2`] = `
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

`;

exports[`array-value.yml - yaml-verify 3`] = `
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

`;

exports[`comment-between.yml - yaml-verify 1`] = `
[
? 123
# comment
: 456
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? 123
  # comment
  : 456,
]

`;

exports[`comment-between.yml - yaml-verify 2`] = `
[
? 123
# comment
: 456
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    ? 123
    # comment
    : 456,
]

`;

exports[`comment-between.yml - yaml-verify 3`] = `
[
? 123
# comment
: 456
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? 123
  # comment
  : 456,
]

`;

exports[`comment-trailing.yml - yaml-verify 1`] = `
[123, # comment
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  123, # comment
]

`;

exports[`comment-trailing.yml - yaml-verify 2`] = `
[123, # comment
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    123, # comment
]

`;

exports[`comment-trailing.yml - yaml-verify 3`] = `
[123, # comment
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  123, # comment
]

`;

exports[`empty.yml - yaml-verify 1`] = `
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[]

`;

exports[`empty.yml - yaml-verify 2`] = `
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[]

`;

exports[`empty.yml - yaml-verify 3`] = `
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[]

`;

exports[`empty-item-colon.yml - yaml-verify 1`] = `
[ : ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: ]

`;

exports[`empty-item-colon.yml - yaml-verify 2`] = `
[ : ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: ]

`;

exports[`empty-item-colon.yml - yaml-verify 3`] = `
[ : ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: ]

`;

exports[`empty-line.yml - yaml-verify 1`] = `
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

`;

exports[`empty-line.yml - yaml-verify 2`] = `
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

`;

exports[`empty-line.yml - yaml-verify 3`] = `
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

`;

exports[`empty-line-collapse.yml - yaml-verify 1`] = `
[ aaa, 

bbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[aaa, bbb]

`;

exports[`empty-line-collapse.yml - yaml-verify 2`] = `
[ aaa, 

bbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[aaa, bbb]

`;

exports[`empty-line-collapse.yml - yaml-verify 3`] = `
[ aaa, 

bbb ]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[aaa, bbb]

`;

exports[`long-key.yml - yaml-verify 1`] = `
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-key.yml - yaml-verify 2`] = `
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-key.yml - yaml-verify 3`] = `
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-key-long-value.yml - yaml-verify 1`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-key-long-value.yml - yaml-verify 2`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-key-long-value.yml - yaml-verify 3`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-plain.yml - yaml-verify 1`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-plain.yml - yaml-verify 2`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-plain.yml - yaml-verify 3`] = `
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-value.yml - yaml-verify 1`] = `
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-value.yml - yaml-verify 2`] = `
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`long-value.yml - yaml-verify 3`] = `
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

`;

exports[`middle-comment.yml - yaml-verify 1`] = `
!!set # comment
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set # comment
[]

`;

exports[`middle-comment.yml - yaml-verify 2`] = `
!!set # comment
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set # comment
[]

`;

exports[`middle-comment.yml - yaml-verify 3`] = `
!!set # comment
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set # comment
[]

`;

exports[`middle-comments.yml - yaml-verify 1`] = `
!!set # comment 1
# comment 2
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set
# comment 1
# comment 2
[]

`;

exports[`middle-comments.yml - yaml-verify 2`] = `
!!set # comment 1
# comment 2
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set
# comment 1
# comment 2
[]

`;

exports[`middle-comments.yml - yaml-verify 3`] = `
!!set # comment 1
# comment 2
[]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set
# comment 1
# comment 2
[]

`;

exports[`next-empty-line.yml - yaml-verify 1`] = `
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

`;

exports[`next-empty-line.yml - yaml-verify 2`] = `
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

    c: 123,
]

`;

exports[`next-empty-line.yml - yaml-verify 3`] = `
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

`;

exports[`props.yml - yaml-verify 1`] = `
!!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set &anchor [1]

`;

exports[`props.yml - yaml-verify 2`] = `
!!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set &anchor [1]

`;

exports[`props.yml - yaml-verify 3`] = `
!!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!set &anchor [1]

`;

exports[`props-in-map.yml - yaml-verify 1`] = `
a: !!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!set &anchor [1]

`;

exports[`props-in-map.yml - yaml-verify 2`] = `
a: !!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!set &anchor [1]

`;

exports[`props-in-map.yml - yaml-verify 3`] = `
a: !!set &anchor [1]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!set &anchor [1]

`;

exports[`short-key.yml - yaml-verify 1`] = `
[? 1,? 2,? 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[? 1, ? 2, ? 3]

`;

exports[`short-key.yml - yaml-verify 2`] = `
[? 1,? 2,? 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[? 1, ? 2, ? 3]

`;

exports[`short-key.yml - yaml-verify 3`] = `
[? 1,? 2,? 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[? 1, ? 2, ? 3]

`;

exports[`short-key-short-value.yml - yaml-verify 1`] = `
[1: a,2: b,3: c]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1: a, 2: b, 3: c]

`;

exports[`short-key-short-value.yml - yaml-verify 2`] = `
[1: a,2: b,3: c]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1: a, 2: b, 3: c]

`;

exports[`short-key-short-value.yml - yaml-verify 3`] = `
[1: a,2: b,3: c]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1: a, 2: b, 3: c]

`;

exports[`short-plain.yml - yaml-verify 1`] = `
[1,2,3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1, 2, 3]

`;

exports[`short-plain.yml - yaml-verify 2`] = `
[1,2,3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1, 2, 3]

`;

exports[`short-plain.yml - yaml-verify 3`] = `
[1,2,3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[1, 2, 3]

`;

exports[`short-value.yml - yaml-verify 1`] = `
[: 1,: 2,: 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: 1, : 2, : 3]

`;

exports[`short-value.yml - yaml-verify 2`] = `
[: 1,: 2,: 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: 1, : 2, : 3]

`;

exports[`short-value.yml - yaml-verify 3`] = `
[: 1,: 2,: 3]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[: 1, : 2, : 3]

`;
